hide overflowing gradients on mobile, prevents scroll

--- a/assets/sass/_conditional_small.scss
+++ b/assets/sass/_conditional_small.scss
@@ -205,6 +205,7 @@
     height: 100vh;
     z-index: 99;
     display: block;
+    overflow: hidden;
   }
   .dc-mobile-nav::before,
   .dc-mobile-nav::after{
